# comp-pub

./: .gitignore  README.md  pyproject.toml
atcoder/abc209/: CMakeLists.txt
atcoder/abc220/: CMakeLists.txt  dl.sh
atcoder/past201912_open/: CMakeLists.txt  dl.sh
atcoder/past202107_open/: CMakeLists.txt  dl.sh
atcoder/tessoku_book/: CMakeLists.txt
atcoder/typical90/: CMakeLists.txt  dl_test_submit.sh  submit.sh
codechef/problems/: CMakeLists.txt
facebook/fhc2021_qual/: CMakeLists.txt
facebook/fhc2021_round1/: CMakeLists.txt
hackerrank/5_days_of_game_theory/: CMakeLists.txt
hackerrank/challenges/: CMakeLists.txt
mojacoder/sgsw/: CMakeLists.txt
topcoder/srm727/: CMakeLists.txt
vcon/games/: CMakeLists.txt
yosupo/: CMakeLists.txt
yosupo/exp_of_formal_power_series/: main_exp_of_formal_power_series.cpp
yosupo/inv_of_formal_power_series/: hoge.txt  main.cpp
yosupo/lca/: doubling.cpp  eulertour.cpp  fischer_heun.cpp  hld.cpp
yosupo/line_add_get_min/: main.cpp  online.cpp
yosupo/log_of_formal_power_series/: main_log_of_formal_power_series.cpp
yosupo/persistent_queue/: main_persistent_queue.cpp
yosupo/persistent_unionfind/: main.cpp
yosupo/point_add_rectangle_sum/: main_point_add_rectangle_sum.cpp
yosupo/pow_of_formal_power_series/: CMakeLists.txt  arbitrarymod.cpp  main.cpp  main_pow_of_formal_power_series.cpp
yosupo/range_kth_smallest/: main.cpp
yosupo/rectangle_sum/: main.cpp
yosupo/segment_add_get_min/: main.cpp
yosupo/set_xor_min/: main.cpp
yosupo/sqrt_mod/: main_sqrt_mod.cpp
yosupo/sqrt_of_formal_power_series/: main_sqrt_of_formal_power_series.cpp
yosupo/static_range_inversions_query/: main.cpp
yosupo/staticrmq/: disjoint_sparse_table.cpp  fischer_heun.cpp  gen.py  main.cpp  main.py  sparse_table.cpp
yukicoder/: CMakeLists.txt
yukicoder/0058/: main.cpp
yukicoder/0075/: main.cpp
yukicoder/0076/: main.cpp
yukicoder/0101/: main.cpp
yukicoder/0155/: main.cpp
yukicoder/0160/: main.cpp
yukicoder/0174/: main_0174.cpp
yukicoder/0243/: main_0243.cpp
yukicoder/0416/: main.cpp
yukicoder/0546/: main_0546.cpp
yukicoder/0885/: main.cpp
yukicoder/0924/: main.cpp  sqrt_decomp_tle.cpp
yukicoder/1066/: main.cpp
yukicoder/1067/: main.cpp
yukicoder/1068/: main.cpp  review1.cpp  review2.cpp
yukicoder/1081/: main.py
yukicoder/1082/: main.py
yukicoder/1083/: main.cpp
yukicoder/1084/: main.cpp
yukicoder/1085/: main.cpp
yukicoder/1101/: main.py
yukicoder/1102/: main.cpp
yukicoder/1103/: main.cpp
yukicoder/1105/: main.cpp  main.py
yukicoder/1107/: main.py
yukicoder/1108/: main.py
yukicoder/1109/: main.py
yukicoder/1110/: main.py
yukicoder/1111/: main.cpp
yukicoder/1112/: main.cpp
yukicoder/1113/: main.cpp
yukicoder/1114/: main.cpp
yukicoder/1115/: main.cpp  review.cpp
yukicoder/1117/: main.cpp  review1.cpp
yukicoder/1149/: main.py  nimber.cpp
yukicoder/1150/: main.cpp
yukicoder/1151/: main.cpp
yukicoder/1152/: main.py
yukicoder/1153/: main.cpp
yukicoder/1168/: main.py
yukicoder/1169/: main.cpp
yukicoder/1170/: main.cpp
yukicoder/1236/: main.py
yukicoder/1237/: main.cpp  main.py
yukicoder/1238/: main.cpp
yukicoder/1239/: main.cpp
yukicoder/1242/: main.py
yukicoder/1243/: main.py
yukicoder/1250/: main.py
yukicoder/1251/: main.py
yukicoder/1253/: main.cpp
yukicoder/1254/: main.cpp
yukicoder/1298/: main.py
yukicoder/1299/: main.py
yukicoder/1300/: main.cpp  seg2.cpp
yukicoder/1301/: main.cpp
yukicoder/1324/: greedy_wa.cpp  main.cpp
yukicoder/1438/: main.cpp
yukicoder/1439/: main.cpp
yukicoder/1441/: main.cpp
yukicoder/1442/: main.cpp
yukicoder/1443/: main.cpp  naive.cpp  output.txt
yukicoder/1457/: main.cpp
yukicoder/1476/: main.py
yukicoder/1477/: main.cpp
yukicoder/1478/: main.cpp
yukicoder/1491/: main.py
yukicoder/1492/: main.cpp
yukicoder/1493/: main.cpp
yukicoder/1505/: main.py
yukicoder/1506/: main.py
yukicoder/1507/: main.cpp
yukicoder/1509/: main.cpp
yukicoder/1512/: main.cpp
yukicoder/1513/: main.cpp
yukicoder/1514/: main.cpp
yukicoder/1529/: main.cpp
yukicoder/1532/: input.txt  main.cpp  meet_in_middle.cpp
yukicoder/1534/: main.py
yukicoder/1535/: main.cpp
yukicoder/1537/: main.cpp
yukicoder/1544/: crt.cpp  main.cpp
yukicoder/1545/: main.cpp
yukicoder/1546/: main.cpp
yukicoder/1553/: main.cpp
yukicoder/1591/: main.cpp
yukicoder/1592/: main.cpp
yukicoder/1593/: main.cpp
yukicoder/1594/: main.cpp
yukicoder/1595/: main.cpp
yukicoder/1596/: main.cpp
yukicoder/1597/: in.txt  main.cpp
yukicoder/1598/: emb.cpp  gen.cpp  main.cpp
yukicoder/1623/: main.cpp
yukicoder/1624/: main.cpp
yukicoder/1636/: main.cpp
yukicoder/1637/: main.cpp
yukicoder/1638/: main.cpp
yukicoder/1639/: main.cpp
yukicoder/1640/: flow.cpp  main.cpp
yukicoder/1641/: main.cpp
yukicoder/1642/: main.cpp
yukicoder/1643/: main.cpp
yukicoder/1644/: main.cpp
yukicoder/1645/: main.cpp
yukicoder/1646/: main.cpp
yukicoder/1647/: main.cpp
yukicoder/1650/: in.txt  main.cpp
yukicoder/1653/: main.cpp
yukicoder/1663/: main.cpp
yukicoder/1664/: main.cpp
yukicoder/1665/: main.cpp
yukicoder/1666/: main.cpp
yukicoder/1667/: main.cpp
yukicoder/1668/: main.cpp
yukicoder/1672/: main.cpp
yukicoder/1673/: main.cpp
yukicoder/1674/: main.cpp
yukicoder/1675/: main.cpp
yukicoder/1676/: main.cpp
yukicoder/1677/: main.cpp
yukicoder/1678/: in.txt  main.cpp
yukicoder/1679/: main.cpp
yukicoder/1707/: main.cpp
yukicoder/1708/: main.cpp
yukicoder/1709/: main.cpp
yukicoder/1710/: in.txt  main.cpp
yukicoder/1713/: main_1713.cpp
yukicoder/1714/: main_1714.cpp
yukicoder/1715/: in.txt  main_1715.cpp
yukicoder/1717/: main_1717.cpp
yukicoder/1718/: main_1718.cpp
yukicoder/1797/: embed.c  main_1797.cpp
yukicoder/1903/: main_1903.cpp
yukicoder/1904/: main_1904.cpp
yukicoder/1905/: main.py  main_1905.cpp
yukicoder/1906/: main_1906.cpp
yukicoder/1908/: main_1908.cpp
yukicoder/1909/: main_1909.cpp
yukicoder/3046/: main_3046.cpp
yukicoder/3076/: main.py
(+6778 files in other folders)
