[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["Keiji Maekawa <m@keijak.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.4"
numpy = "^1.18.3"
scipy = "^1.4.1"
scikit-learn = "^0.22.2"
numba = "^0.49.0"
networkx = "^2.4"
selenium = "*"
jupyter = "*"
frosch = "^0.1.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
