project(yosupo)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O0 -g -Wall -Wextra -fsanitize=address,undefined -DMY_DEBUG")

add_executable(rmq_fischer_heun staticrmq/fischer_heun.cpp)
add_executable(lca_fischer_heun lca/fischer_heun.cpp)

add_executable(rectangle_sum rectangle_sum/main.cpp)
add_executable(persistent_queue persistent_queue/main_persistent_queue.cpp)
add_executable(sqrt_of_formal_power_series sqrt_of_formal_power_series/main_sqrt_of_formal_power_series.cpp)
add_executable(point_add_rectangle_sum point_add_rectangle_sum/main_point_add_rectangle_sum.cpp)
add_executable(log_of_formal_power_series log_of_formal_power_series/main_log_of_formal_power_series.cpp)
add_executable(exp_of_formal_power_series exp_of_formal_power_series/main_exp_of_formal_power_series.cpp)
add_executable(pow_of_formal_power_series pow_of_formal_power_series/main_pow_of_formal_power_series.cpp)
