project(yukicoder)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O0 -g -Wall -Wextra -fsanitize=address,undefined -DMY_DEBUG")

add_executable(0076 0076/main.cpp)
add_executable(1713 1713/main_1713.cpp)
add_executable(1714 1714/main_1714.cpp)
add_executable(1715 1715/main_1715.cpp)
add_executable(1716 1716/main_1716.cpp)
add_executable(1717 1717/main_1717.cpp)
add_executable(1718 1718/main_1718.cpp)
add_executable(1719 1719/main_1719.cpp)
