project(yukicoder)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O0 -g -Wall -Wextra -fsanitize=address,undefined -DMY_DEBUG")

add_executable(1066 1066/main.cpp)
add_executable(1117 1117/review1.cpp)
add_executable(1797 1797/main_1797.cpp)
add_executable(0243 0243/main_0243.cpp)
add_executable(1873 1873/main_1873.cpp)
add_executable(1874 1874/main_1874.cpp)
add_executable(0125 0125/main_0125.cpp)
add_executable(0546 0546/main_0546.cpp)
