project(yukicoder)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O0 -g -Wall -Wextra -fsanitize=address,undefined -DMY_DEBUG")

add_executable(1066 1066/main.cpp)
add_executable(1117 1117/review1.cpp)
add_executable(1797 1797/main_1797.cpp)
add_executable(0243 0243/main_0243.cpp)
add_executable(1873 1873/main_1873.cpp)
add_executable(1874 1874/main_1874.cpp)
add_executable(0125 0125/main_0125.cpp)
add_executable(0546 0546/main_0546.cpp)
add_executable(1905 1905/main_1905.cpp)
add_executable(1903 1903/main_1903.cpp)
add_executable(1904 1904/main_1904.cpp)
add_executable(1906 1906/main_1906.cpp)
add_executable(1908 1908/main_1908.cpp)
add_executable(1909 1909/main_1909.cpp)
add_executable(1910 1910/main_1910.cpp)
add_executable(1911 1911/main_1911.cpp)
add_executable(1912 1912/main_1912.cpp)
add_executable(1913 1913/main_1913.cpp)
add_executable(1914 1914/main_1914.cpp)
