project(abc220)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O0 -g -Wall -Wextra -fsanitize=address,undefined -fno-omit-frame-pointer -DMY_DEBUG")
add_executable(A A/main.cpp)
add_executable(B B/main.cpp)
add_executable(C C/main.cpp)
add_executable(D D/main.cpp)
add_executable(E E/main.cpp)
add_executable(F F/main.cpp)
add_executable(G G/main.cpp)
add_executable(H H/main.cpp)
