project(past201912_open)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-g -O0 -Wall -Wextra -fsanitize=address,undefined -fno-omit-frame-pointer -DMY_DEBUG")
add_executable(A A/main_A.cpp)
add_executable(B B/main_B.cpp)
add_executable(C C/main_C.cpp)
add_executable(D D/main_D.cpp)
add_executable(E E/main_E.cpp)
add_executable(F F/main_F.cpp)
add_executable(G G/main_G.cpp)
add_executable(H H/main_H.cpp)
add_executable(I I/main_I.cpp)
add_executable(J J/main_J.cpp)
add_executable(K K/main_K.cpp)
add_executable(L L/main_L.cpp)
add_executable(M M/main_M.cpp)
add_executable(N N/main_N.cpp)
add_executable(O O/main_O.cpp)
