project(past202107_open)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O0 -g -Wall -Wextra -fsanitize=address,undefined -DMY_DEBUG")
add_executable(A A/main.cpp)
add_executable(B B/main.cpp)
add_executable(C C/main.cpp)
add_executable(D D/main.cpp)
add_executable(E E/main.cpp)
add_executable(F F/main.cpp)
add_executable(G G/main.cpp)
add_executable(H H/main.cpp)
add_executable(I I/main.cpp)
add_executable(J J/main.cpp)
add_executable(K K/main.cpp)
add_executable(L L/main.cpp)
add_executable(M M/main.cpp)
add_executable(N N/main.cpp)
add_executable(O O/main.cpp)
