project(tessoku_book)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-g -O0 -Wall -Wextra -fsanitize=address,undefined -fno-omit-frame-pointer -DMY_DEBUG")
add_executable(c17 c17/main_c17.cpp)
add_executable(c18 c18/main_c18.cpp)
add_executable(c19 c19/main_c19.cpp)
add_executable(c16 c16/main_c16.cpp)
add_executable(c15 c15/main_c15.cpp)
add_executable(c14 c14/main_c14.cpp)
add_executable(c13 c13/main_c13.cpp)
add_executable(c12 c12/main_c12.cpp)
add_executable(c11 c11/main_c11.cpp)
add_executable(c10 c10/main_c10.cpp)
add_executable(c09 c09/main_c09.cpp)
