project(sgsw)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-g -O0 -Wall -Wextra -fsanitize=address,undefined -fno-omit-frame-pointer -DMY_DEBUG")
add_executable(frog_in_the_well frog_in_the_well/main_frog_in_the_well.cpp)
add_executable(alice_loves_segment alice_loves_segment/main_alice_loves_segment.cpp)
add_executable(swap_modulo swap_modulo/main_swap_modulo.cpp)
add_executable(min_string min_string/main_min_string.cpp)
add_executable(power_divisors power_divisors/main_power_divisors.cpp)
add_executable(comp_cost comp_cost/main_comp_cost.cpp)
