project(games)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-g -O0 -Wall -Wextra -fsanitize=address,undefined -fno-omit-frame-pointer -DMY_DEBUG")
add_executable(p1 p1/main_p1.cpp)
add_executable(p2 p2/main_p2.cpp)
add_executable(p4 p4/main_p4.cpp)
add_executable(p3 p3/main_p3.cpp)
add_executable(p5 p5/main_p5.cpp)
add_executable(p6 p6/main_p6.cpp)
add_executable(p8 p8/main_p8.cpp)
