project(games)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-g -O0 -Wall -Wextra -fsanitize=address,undefined -fno-omit-frame-pointer -DMY_DEBUG")
add_executable(p1 p1/main_p1.cpp)
add_executable(p2 p2/main_p2.cpp)
add_executable(p4 p4/main_p4.cpp)
add_executable(p3 p3/main_p3.cpp)
add_executable(p5 p5/main_p5.cpp)
add_executable(p6 p6/main_p6.cpp)
add_executable(p7 p7/main_p7.cpp)
add_executable(p8 p8/main_p8.cpp)
add_executable(p9 p9/main_p9.cpp)
add_executable(p11 p11/main_p11.cpp)
add_executable(p14 p14/main_p14.cpp)
add_executable(p12 p12/main_p12.cpp)
add_executable(p16 p16/main_p16.cpp)
add_executable(p18 p18/main_p18.cpp)
add_executable(p19 p19/main_p19.cpp)
add_executable(p17 p17/main_p17.cpp)
add_executable(p21 p21/main_p21.cpp)
add_executable(p22 p22/main_p22.cpp)
add_executable(p25 p25/main_p25.cpp)
add_executable(p13 p13/main_p13.cpp)
