project(1594)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O0 -g -Wall -Wextra -fsanitize=address,undefined -DMY_DEBUG")
add_executable(A A/main.cpp)
add_executable(B B/main.cpp)
add_executable(C C/main.cpp)
add_executable(D D/main.cpp)
add_executable(E1 E1/main.cpp)
add_executable(E2 E2/main.cpp)
add_executable(F F/main.cpp)
