project(1958)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O0 -g -Wall -Wextra -fsanitize=address,undefined -DMY_DEBUG")
add_executable(D D/main.cpp)
add_executable(C C/main.cpp)
add_executable(E E/main.cpp)
add_executable(F F/main.cpp)
add_executable(A A/main_A.cpp)
add_executable(B B/main_B.cpp)
