project(1617)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-g -O0 -Wall -Wextra -fsanitize=address,undefined -fno-omit-frame-pointer -DMY_DEBUG")
add_executable(A A/main_A.cpp)
add_executable(B B/main_B.cpp)
add_executable(C C/main_C.cpp)
add_executable(D1 D1/main_D1.cpp)
add_executable(D2 D2/main_D2.cpp)
add_executable(E E/main_E.cpp)
