project(102787)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-g -O0 -Wall -Wextra -fsanitize=address,undefined -fno-omit-frame-pointer -DMY_DEBUG")
add_executable(A A/main_A.cpp)
add_executable(B B/main_B.cpp)
add_executable(C C/main_C.cpp)
add_executable(D D/main_D.cpp)
add_executable(Y Y/main_Y.cpp)
add_executable(Z Z/main_Z.cpp)
