project(START34A)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-g -O0 -Wall -Wextra -fsanitize=address,undefined -fno-omit-frame-pointer -DMY_DEBUG")
add_executable(BSXOR BSXOR/main_BSXOR.cpp)
add_executable(BINMIS BINMIS/main_BINMIS.cpp)
add_executable(GDPERM GDPERM/main_GDPERM.cpp)
add_executable(COUARR COUARR/main_COUARR.cpp)
add_executable(LULIMPIADA LULIMPIADA/main_LULIMPIADA.cpp)
add_executable(EXPIRY EXPIRY/main_EXPIRY.cpp)
add_executable(TRUESCORE TRUESCORE/main_TRUESCORE.cpp)
add_executable(BULBLIFE BULBLIFE/main_BULBLIFE.cpp)
add_executable(POSPROD POSPROD/main_POSPROD.cpp)
add_executable(AVGARR AVGARR/main_AVGARR.cpp)
