project(Start21)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-g -O0 -Wall -Wextra -fsanitize=address,undefined -fno-omit-frame-pointer -DMY_DEBUG")
add_executable(CHEFGRD CHEFGRD/main_CHEFGRD.cpp)
add_executable(ANDORUNI ANDORUNI/main_ANDORUNI.cpp)
add_executable(CHEFWM CHEFWM/main_CHEFWM.cpp)
add_executable(MEANIDIAN MEANIDIAN/main_MEANIDIAN.cpp)
add_executable(SOS SOS/main_SOS.cpp)
add_executable(MSUB121 MSUB121/main_MSUB121.cpp)
