project(pdc001)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O0 -g -Wall -Wextra -fsanitize=address,undefined -D_GLIBCXX_DEBUG -DMY_DEBUG")
add_executable(1 1/main.cpp)
add_executable(2 2/main.cpp)
add_executable(3 3/main.cpp)
add_executable(4 4/main.cpp)
add_executable(5 5/main.cpp)
add_executable(6 6/main.cpp)
add_executable(7 7/main.cpp)
add_executable(8 8/main.cpp)
